PyVISA Changelog
================

1.16.0 (unreleased)
-------------------
- fix handling of missing secondary address for GPIB resources PR #913
- added support for reading and writing definite-length binary blocks ≥1 GB PR #914

1.15.0 (01-04-2025)
-------------------
- make `pyvisa-shell` and `pyvisa-info` handle arguments independently PR #859
- add support for Python 3.13 PR #852
- drop support for Python 3.8 and 3.9 PR #852
- add a -v option to pyvisa-shell to increase log verbosity and set default to WARN PR #816
- added support for an optional monitoring interface object to the read_binary_values() and
  query_binary_values() methods of message-based resources.
- added the message_size() helper function to calculate the estimated size of a data
  transfer, including the header.
- prevent adding duplicate paths to the DLL search path during ResourceManager
  instantiation #811
- set 4.0.0 as the lower bound for `typing_extensions` PR #866
- list VICP resources in the appropriates attributes PR #878
- add support for Prologix GPIB adapters (both USB and ethernet) PR #887

1.14.1 (22-11-2023)
-------------------
- fix handling of missing board number for VICP resources PR #787

1.14.0 (13-11-2023)
-------------------
- fix ctypes truncated pointers on 64-bit for ViBusAddress, ViBusSize, ViAttrState PR #725
- fix read_termination_context does not allow None PR #727
- replace `bitness` for library and python runtime information with instruction set
  and bitness #733
  Resulting API changes:
  - `pyvisa.util.LibraryPath.arch` now returns a list of `pyvisa.util.ArchitectureType`
    enum values representing architectures the binary was compiled for
  - `p.u.LibraryPath.is_32bit`, `p.u.LibraryPath.is_64bit`, and `p.u.LibraryPath.bitness`
    have been removed
  - `p.u.get_shared_library_arch` now returns `p.u.PEMachineType` instead of a string
  - `p.u.get_arch` now returns a list of `p.u.ArchitectureType`