@@ -5,6 +5,7 @@ PyVISA Changelog
 -------------------
 - fix handling of missing secondary address for GPIB resources PR #913
 - added support for reading and writing definite-length binary blocks ≥1 GB PR #914
+- fix static methods for GPIB addresses, and some wrong GPIB commands PR #930
 
 1.15.0 (01-04-2025)
 -------------------
